# PetalLink

./: .env.example  .gitignore  .metadata  Cargo.toml  Entitlements.plist  README.md  analysis_options.yaml  build.gradle.kts  build.rs  gpt.record.md  gradle.properties  gradlew  kotlin  kotlin.bat  project.yaml  pubspec.yaml  settings.gradle.kts  tauri.conf.json  tauri.dev.conf.json  version.properties
.github/workflows/: ci.yml  release.yml
ai/: coding-rules.md  release-rule.md
app/: App.vue  index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue-shim.d.ts
app/api/: auth.ts  config.ts  drive.contract.test.ts  drive.ts  logs.ts  platform.ts  sync.ts  tauri.ts  transfer.contract.test.ts  transfer.ts  updater.ts
app/components/: IconSprite.vue  UpdateDialog.vue
app/composables/: useAsyncAction.ts  useFileOperation.ts
app/stores/: auth.ts  fileBrowser.ts  sync.test.ts  sync.ts  transfer.test.ts  transfer.ts  updater.ts
app/styles/: animations.css  reset.css  tokens.css
app/tests/: drive.contract.test.ts  error-message.test.ts  free-up.contract.test.ts  sync.test.ts  thumbnail.test.ts  transfer-state-ui.test.ts  transfer.contract.test.ts  transfer.test.ts
app/utils/: error.ts  format.ts  fs.ts
app/views/: LoginPage.vue
build-logic/petallink-toolchain/: module.yaml  plugin.yaml
build-plugin/: module.yaml  plugin.yaml
build-plugin/.desktop-packaging/: README.md  build.gradle.kts  gradle.properties  gradlew.bat
capabilities/: default.json
design/: 01-login.html  02-main.html  03-sync-states.html  04-transfer.html  05-file-ops.html  06-settings.html  07-logs.html  08-update.html  09-tray.html  index.html
docs/: 01-项目总览.md  02-功能需求清单.md  03-华为Drive-API接口规范.md  04-数据模型与持久化.md  05-IPC命令与事件接口规范.md  06-同步引擎与传输状态机.md  08-前端API与Store接口规范.md  09-设计系统.md  10-Kuikly重构迁移指南.md  11-基于inode的文件身份识别方案.md  api调用整理.md  architecture-review.md  主题与皮肤.md  概要设计文档.md
gradle/: libs.versions.toml
jvm-app/: module.yaml
lib/: main.dart
scripts/: smoke-test-macos-app.sh  verify-macos-artifacts.sh
shared/: build.gradle.kts  module.yaml  shared.podspec
src/: Entitlements.plist  commands.rs  constants.rs  error.rs  lib.rs  main.rs
test/: widget_test.dart
tests/: core_config_test.rs  core_logging_test.rs  core_paths_test.rs  drive_api_test.rs  drive_ascii_json_test.rs  drive_changes_test.rs  drive_client_error_test.rs  drive_download_test.rs  drive_models_test.rs  error_contract_test.rs  oauth_flow_test.rs  platform_public_test.rs  sync_cloud_tree_test.rs  sync_conflict_test.rs  sync_engine_test.rs  sync_path_recovery_test.rs  sync_retry_policy_test.rs  sync_stability_test.rs  sync_state_store_test.rs  sync_state_test.rs  sync_task_recovery_test.rs  sync_transfer_state_test.rs  upload_tester.rs
(+925 files in other folders)
